--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 NODE_ENV=development
-PORT=3000
+SERVER_PORT=3000
+SERVER_HOST=127.0.0.1
 
 MONGO_PROD_URI=
 MONGO_DEV_URI=mongodb://127.0.0.1:27017/farmer-nusantara
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=
+EMAIL_USER=example@gmail.com
+EMAIL_PASS=passExample
