--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.3.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.7.5"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
