--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.7",
     "express": "~4.16.1",
     "express-validator": "^6.14.0",
+    "googleapis": "^100.0.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
