--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "mongoose": "^6.3.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
-    "nodemailer": "^6.7.5"
+    "nodemailer": "^6.7.5",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0",
     "nodemon": "^2.0.16"
   },
   "engines": {
